[package]
authors = ["Abhishek Shah"]
name = "better_peekable"
description = "Create a Peekable structure like Rust's Peekable except allowing for peeking n items ahead"
repository = "https://github.com/weezy20/better_peekable"
readme = "README.md"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
keywords = ["iterator", "multipeek", "better_peekable", "peekable", "peek"]
categories = ["data-structures"]

