[package]
authors = ["Abhishek Shah"]
name = "better_peekable"
description = "Peekable iterator like std::iter::Peekable but allows for peeking n items ahead instead of just one."
repository = "https://github.com/weezy20/better_peekable"
readme = "README.md"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
keywords = ["iterator", "multipeek", "parser", "lexer", "peekable"]
categories = ["data-structures"]

[features]
default = ["alloc"]
alloc = []
std = ["alloc"]

[lib]
path = "lib.rs"

[dev-dependencies]
rand = "0.9.2"
